<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/main_menu">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/home" />
            <item
                android:id="@+id/nav_saved_places"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/saved_places" />

            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map_black_24dp"
                android:title="@string/map" />
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_transactions"
                android:icon="@drawable/baseline_credit_card_24"
                android:title="@string/transactions"
                android:visible="false" />

            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/baseline_face_black_24"
                android:title="@string/login" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_undo_black_24"
                android:title="@string/logout"
                android:visible="false" />
        </menu>
    </item>

    <item
        android:id="@+id/admin_menu"
        android:title="@string/administrator"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_add_credit"
                android:icon="@drawable/baseline_attach_money_black_24"
                android:title="@string/add_credit" />

            <item
                android:id="@+id/nav_receive_credit"
                android:icon="@drawable/baseline_attach_money_black_24"
                android:title="@string/receive_credit" />

            <item
                android:id="@+id/nav_add_place"
                android:icon="@drawable/baseline_place_black_24"
                android:title="@string/add_place" />
        </menu>
    </item>


    <item android:title="@string/preferences">
        <menu>
            <item
                android:id="@+id/nav_preferences"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/preferences" />
        </menu>

    </item>

</menu>