<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey2">

    <!-- TODO: mettere collapsing image view -->
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/space_10" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_10"
                    android:layout_marginTop="-40dp"
                    android:layout_marginRight="@dimen/space_10"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/space_5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/place_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <RatingBar
                            android:id="@+id/avg_rating"
                            style="@style/Widget.AppCompat.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:scaleX=".8"
                            android:scaleY=".8"
                            android:stepSize="0.5"
                            android:theme="@style/RatingBar"
                            android:transformPivotX="0dp"
                            android:transformPivotY="0dp" />

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/space_5"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/grey3" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/space_20" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_10"
                    android:layout_marginRight="@dimen/space_10"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="2dp">

                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        xmlns:map="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="200sp"
                        map:liteMode="true"
                        tools:context=".MapFragment" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_buy_ticket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_10"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="@dimen/space_10"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buy_ticket"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <TextView
                            android:id="@+id/ticket_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/ticket_info" />

                        <Button
                            android:id="@+id/btn_nfc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/str_btn_nfc"
                            android:theme="@style/AppTheme.Button" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_10"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="@dimen/space_10"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/comments"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <include
                            android:id="@+id/add_comment_layout"
                            layout="@layout/add_comment" />

                        <TextView
                            android:id="@+id/no_comments_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/no_comments_message"
                            android:visibility="gone" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/comment_recycle_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/show_all_comments"
                            style="@style/AppTheme.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:background="@color/fui_transparent"
                            android:text="@string/vedi_tutti" />


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/round_favorite_border_white_48"
            app:srcCompat="@android:color/holo_red_dark" />

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>
